--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,50 @@ body {
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   grid-template-columns: [sidebar-start] 80px [sidebar-end full-start] minmax(60px, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 140px) [col-end]) [center-end] minmax(60px, 1fr) [full-end]; }
 
-.heading {
+.heading-3, .heading-2 {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: 400; }
+
+.heading-3 {
+  font-size: 4rem;
+  line-height: 1;
+  font-style: italic; }
+
+.heading-2 {
+  color: #c69963;
+  font-size: 1.4rem;
+  text-transform: uppercase; }
+
+.heading-1 {
   font-family: "Josefin Sans", sans-serif;
   font-weight: 400;
   font-size: 1.4rem; }
+
+.btn {
+  background-color: #c69963;
+  color: #fff;
+  border: none;
+  border-radius: 0;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  padding: 1.8rem 3rem;
+  cursor: pointer;
+  transition: all .2s; }
+  .btn:hover {
+    background-color: #B28451; }
+
+.mb-sm {
+  margin-bottom: 2rem; }
+
+.mb-md {
+  margin-bottom: 3rem; }
+
+.mb-lg {
+  margin-bottom: 4rem; }
+
+.mb-hg {
+  margin-bottom: 8rem; }
 
 .sidebar {
   background-color: #c69963;
@@ -60,15 +100,97 @@ body {
 
 .story__pictures {
   background-color: #c69963;
-  grid-column: full-start / col-end 4; }
+  background-image: linear-gradient(rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url("../img/back.jpg");
+  grid-column: full-start / col-end 4;
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(6, 1fr);
+  align-items: center; }
 
 .story__content {
   background-color: #f9f7f6;
-  grid-column: col-start 5 / full-end; }
+  grid-column: col-start 5 / full-end;
+  padding: 6rem 8vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start; }
+
+.story__text {
+  font-size: 1.5rem;
+  font-style: italic;
+  margin-bottom: 4rem; }
+
+.story__img--1 {
+  width: 100%;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1);
+  grid-column: 2 / 6;
+  grid-row: 2 / 6; }
+
+.story__img--2 {
+  width: 115%;
+  grid-row: 4 / 6;
+  grid-column: 4 / 7;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2);
+  z-index: 20; }
 
 .homes {
-  background-color: #101d2c;
-  grid-column: center-start/ center-end; }
+  display: grid;
+  margin: 150px 0;
+  grid-column: center-start/ center-end;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 7rem; }
+
+.home {
+  background-color: #f9f7f6;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 35px; }
+  .home__img {
+    width: 100%;
+    grid-column: 1 / -1;
+    grid-row: 1 / 1; }
+  .home__like {
+    fill: #c69963;
+    width: 2.5rem;
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    height: 2.5rem;
+    justify-self: end;
+    z-index: 2;
+    margin: 1rem; }
+    .home__like__location, .home__like__rooms {
+      margin-top: 2.5rem; }
+  .home__location, .home__rooms, .home__area, .home__price {
+    margin-left: 50px; }
+    .home__location svg, .home__rooms svg, .home__area svg, .home__price svg {
+      fill: #c69963;
+      height: 2rem;
+      width: 2rem; }
+  .home__name {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    justify-self: center;
+    background-color: #101d2c;
+    color: #ffffff;
+    align-self: end;
+    transform: translateY(50%);
+    width: 80%;
+    z-index: 3;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 400;
+    font-family: "Josefin Sans", sans-serif;
+    padding: 1.25rem; }
+  .home__cta {
+    background-color: #c69963;
+    color: #ffffff;
+    text-transform: uppercase;
+    grid-column: 1 / -1;
+    border: none;
+    font-weight: 400;
+    font-size: 1.4rem;
+    padding: 1rem 3rem; }
 
 .gallery {
   background-color: #54483A;
