--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -1,4 +1,81 @@
 .homes{
-  background-color: $color-secondary;
+  //background-color: $color-secondary;
+  display: grid;
+  margin: 150px 0;
   grid-column: center-start/ center-end;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 7rem;
 }
+
+.home{
+background-color: $color-grey-light-1;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-row-gap: 35px;
+
+
+  &__img{
+    width: 100%;
+    grid-column: 1 / -1;
+    grid-row: 1 / 1;
+  }
+  &__like{
+    fill: $color-primary;
+    width: 2.5rem;
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    height: 2.5rem;
+    justify-self: end;
+    z-index: 2;
+    margin: 1rem;
+
+    &__location,
+    &__rooms{
+    margin-top: 2.5rem;
+    }
+  }
+  &__location,
+  &__rooms,
+  &__area,
+  &__price {
+    margin-left: 50px;
+
+    svg{
+      fill: $color-primary;
+      height: 2rem;
+      width: 2rem;
+    }
+    p{
+
+    }
+  }
+  &__name{
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    justify-self: center;
+    background-color: $color-secondary;
+    color: #ffffff;
+    align-self: end;
+    transform: translateY(50%);
+    width: 80%;
+    z-index: 3;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 400;
+    font-family: $font-display;
+    padding: 1.25rem;
+  }
+  &__cta{
+    background-color: $color-primary;
+    color: #ffffff;
+    text-transform: uppercase;
+    grid-column: 1 / -1;
+    border: none;
+    font-weight: 400;
+    font-size: 1.4rem;
+    padding: 1rem 3rem;
+  }
+
+}
+
+
