--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,15 +1,50 @@
-//%heading {
-//  font-family: $font-display;
-//  font-weight: 400;
-//}
-//
-//.heading-1{
-//  @extend %heading;
-//}
+%heading {
+  font-family: $font-display;
+  font-weight: 400;
+}
 
-.heading{
+.heading-3{
+  @extend %heading;
+  font-size: 4rem;
+  line-height: 1;
+  font-style: italic;
+
+}
+.heading-2{
+  @extend %heading;
+  color: $color-primary;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+}
+
+.heading-1{
   font-family: $font-display;
   font-weight: 400;
   font-size: 1.4rem;
 
 }
+
+
+.btn{
+  background-color: $color-primary;
+  color: #fff;
+  border: none;
+  border-radius: 0;
+  font-family: $font-display;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  padding: 1.8rem 3rem;
+  cursor:pointer;
+  transition: all .2s;
+
+  &:hover{
+    background-color: $color-primary-dark;
+  }
+}
+
+.mb-sm{margin-bottom: 2rem;}
+.mb-md{margin-bottom: 3rem;}
+.mb-lg{margin-bottom: 4rem;}
+.mb-hg{margin-bottom: 8rem;}
+
+
